; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_cx24120.c_cx24120_set_voltage.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_cx24120.c_cx24120_set_voltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.cx24120_state* }
%struct.cx24120_state = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.cx24120_cmd = type { i32, i32*, i32 }

@.str = private unnamed_addr constant [6 x i8] c"(%d)\0A\00", align 1
@CMD_SETVOLTAGE = common dso_local global i32 0, align 4
@SEC_VOLTAGE_18 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32)* @cx24120_set_voltage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cx24120_set_voltage(%struct.dvb_frontend* %0, i32 %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.cx24120_state*, align 8
  %6 = alloca %struct.cx24120_cmd, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %8 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %7, i32 0, i32 0
  %9 = load %struct.cx24120_state*, %struct.cx24120_state** %8, align 8
  store %struct.cx24120_state* %9, %struct.cx24120_state** %5, align 8
  %10 = load %struct.cx24120_state*, %struct.cx24120_state** %5, align 8
  %11 = getelementptr inbounds %struct.cx24120_state, %struct.cx24120_state* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @dev_dbg(i32* %13, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i32, i32* @CMD_SETVOLTAGE, align 4
  %17 = getelementptr inbounds %struct.cx24120_cmd, %struct.cx24120_cmd* %6, i32 0, i32 2
  store i32 %16, i32* %17, align 8
  %18 = getelementptr inbounds %struct.cx24120_cmd, %struct.cx24120_cmd* %6, i32 0, i32 0
  store i32 2, i32* %18, align 8
  %19 = getelementptr inbounds %struct.cx24120_cmd, %struct.cx24120_cmd* %6, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  store i32 0, i32* %21, align 4
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* @SEC_VOLTAGE_18, align 4
  %24 = icmp eq i32 %22, %23
  %25 = zext i1 %24 to i64
  %26 = select i1 %24, i32 1, i32 0
  %27 = getelementptr inbounds %struct.cx24120_cmd, %struct.cx24120_cmd* %6, i32 0, i32 1
  %28 = load i32*, i32** %27, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 1
  store i32 %26, i32* %29, align 4
  %30 = load %struct.cx24120_state*, %struct.cx24120_state** %5, align 8
  %31 = call i32 @cx24120_message_send(%struct.cx24120_state* %30, %struct.cx24120_cmd* %6)
  ret i32 %31
}

declare dso_local i32 @dev_dbg(i32*, i8*, i32) #1

declare dso_local i32 @cx24120_message_send(%struct.cx24120_state*, %struct.cx24120_cmd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
